# driveml

./: LICENSE  Makefile  README.md  download_av.sh  driveml.yml  install.sh  pyproject.toml  requirements.txt  uninstall.sh
conf/: logging.yml
conf/base/: parameters_get_argoverse_v2_data.yml
docs/: mkdocs.yml
docs/docs/: index.md
driveml/: README.md  pyproject.toml
driveml/drivee/: __init__.py  dataset.py  features.py  plots.py
driveml/drivee/modeling/: predict.py  train.py
src/driveml/: __init__.py  __main__.py
src/driveml/pipelines/data_processing/: nodes.py
src/driveml/pipelines/get_argoverse_v2_data/: __init__.py  nodes.py  pipeline.py
tests/: test_run.py
tests/pipelines/data_science/: test_pipeline.py
tests/pipelines/get_argoverse_v2_data/: test_pipeline.py
